# unitree-sdk2-mcp

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
config/: mcp_config.json
src/: g1_mcp_server.py
